bug : odd gap between main and footer

--- a/CSS/social.css
+++ b/CSS/social.css
@@ -2,15 +2,10 @@ main {
     margin: 0 auto;
     width: 100vw;
     max-width: 100vw;
-    background: pink;
 }
 
 html {
     overflow-x: hidden;
-}
-
-footer {
-    margin: -40px;
 }
 
 #social-circles-container {
